# spear

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  makefile
src/: CMakeLists.txt  main.cpp
src/linalg/: CMakeLists.txt  linalg.cpp  linalg.h  matrix4.cpp  matrix4.h  vector3.cpp  vector3.h
src/objects/: mesh.h
src/objects/meshes/: cuboid.blend  cuboid.blend1  cuboid.h
src/render/: CMakeLists.txt  renderer.cpp  renderer.h
src/scene/: CMakeLists.txt  scene.h
support/cmake/: CXXFlags.cmake
test/: CMakeLists.txt
test/glfw3_minimal/: CMakeLists.txt
test/units/: CMakeLists.txt  main.cpp  matrix4-test.cpp  vector3-test.cpp
tools/cmake/: DocumentationTargets.cmake
