
##
## Project Properties
##
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(spear)

SET(APPLICATION_NAME "spear")
SET(APPLICATION_CODENAME "${PROJECT_NAME}")
SET(APPLICATION_COPYRIGHT_YEARS "2016")

SET(APPLICATION_VERSION_MAJOR 0)
SET(APPLICATION_VERSION_MINOR 1)
SET(APPLICATION_VERSION_PATCH 0)

SET(APPLICATION_VERSION_TYPE SNAPSHOT)
SET(APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET(APPLICATION_VENDOR_ID "com.AJC")
SET(APPLICATION_VENDOR_NAME "AJC")
SET(APPLICATION_VENDOR_URL "https://github.com/anthony-jclark/spear")
SET(APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")



##
## Project Output Paths
##
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(BIN_PATH "${MAINFOLDER}/bin")
SET(SRC_PATH "${MAINFOLDER}/src")
# SET(LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_PATH})


##
## Project Search Paths
##
LIST(APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
# LIST(APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools")
# LIST(APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/thirdparty")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${MAINFOLDER}/tools/cmake")
# INCLUDE_DIRECTORIES("${MAINFOLDER}/include")



##
## Use 0 for debugging, 1 for release
##
SET(CMAKE_VERBOSE_MAKEFILE 0)



##
## Project Sources
##
FILE(GLOB_RECURSE PROJECT_SRCS ${MAINFOLDER}/src/*.cpp ${MAINFOLDER}/src/*.h)
FILE(GLOB_RECURSE TEST_SRCS ${MAINFOLDER}/test/*.cpp ${MAINFOLDER}/test/*.h)



##
## Configure Files
##
FILE(GLOB_RECURSE CONFIGINPUTS1 include/*.h.in.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS2 src/*.h.in.cmake)
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
FOREACH(CONFIGINPUT ${CONFIGINPUTS})
    STRING(REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    CONFIGURE_FILE("${CONFIGINPUT}" "${CONFIGOUTPUT1}")
ENDFOREACH(CONFIGINPUT ${CONFIGINPUTS})



##
## Add Build Targets
##
ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(thirdparty)
# ADD_SUBDIRECTORY(test)



##
## Add Documentation Targets
##
# INCLUDE(DocumentationTargets)
